<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ShareYourTable</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_login">Login Here</string>
    <string name="create_account">Create an account</string>
    <string name="login">Log In</string>
    <string name="signup">Sign Up</string>
    <string name="facebook">Facebook</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="signup_email">Use your email to sign up</string>
    <string name="title_activity_create_profile">My Profile</string>
    <string name="age_group">Age Group</string>
    <string name="age_group_18">18 &#8211; 30</string>
    <string name="age_group_30">30 &#8211; 50</string>
    <string name="age_group_50">50+</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="interests">Interests</string>
    <string name="dating">Dating</string>
    <string name="hangout">Hangout</string>
    <string name="about_me">About me</string>
    <string name="looking_for">Looking for</string>
    <string name="profile_image">Profile Image</string>
    <string name="interests_hint">Enter your interests here</string>
    <string name="aboutme_hint">About me</string>
    <string name="create_profile">Create</string>
    <string name="search">Search</string>
    <string name="near">Near</string>
    <string name="find">Find</string>
    <string name="title_activity_yelp">YelpActivity</string>
    <string name="restaurant_address">Address</string>
    <string name="restaurant_image">Restaurant image</string>
    <string name="restaurant_name">Restaurant Name</string>
    <string name="ratings">Ratings</string>
    <string name="events">Events</string>
    <string name="where">Where</string>
    <string name="time">Time</string>
    <string name="phone_number">Phone Number</string>
    <string name="table_for">Table For</string>
    <string name="personal_message">Personal Message</string>
    <string name="done">Done</string>
    <string name="select_restuarant">Select this Restaurant</string>
    <string name="title_activity_create_event">My Event</string>
    <string name="title_activity_view_event">Event</string>
    <string name="title_activity_timeline">Events</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="missing_fields">Please enter missing fields</string>
	<string name="profile">Profile</string>
	<string name="map">Map</string>
	<string name="reviews">Reviews</string>
	<string name="find_hint">e.g. tacos, Max\'s</string>
	<string name="near_hint">e.g. san jose</string>
	<string name="choose_restaurant">Choose from Yelp!</string>
    <string name="select_time">Tap to choose time</string>
    <string name="select_date">Tap to choose date</string>
    <string name="day">Day</string>
    <string name="going_to_event">Going to </string>
    <string name="action_settings">Settings</string>
    <string name="message_hint">Say anything</string>
    <string name="send">Send</string>
    <string name="list">List</string>
    <string name="profile_me">My Profile Pic</string>
    <string name="profile_other">Other profile pic</string>
    <string name="with_people">With</string>
    <string name="people">people</string>
    <string name="no_network">No internet available</string>
    <string name="edit">edit</string>
    <string name="save">save</string>
    <string name="full_name">Full Name</string>
    <string name="login_failed">Login Failed</string>
    <string name="title_location">LOCATION</string>
    <string name="title_date">DATE</string>
    <string name="title_details">DETAILS</string>
    <string name="title_message">MESSAGE</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_chat">ChatActivity</string>
    <string name="title_activity_splash_screen">Share Your Table</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

</resources>